<resources>
    <string name="app_name">Palindrome Checker</string>
    <string name="icon_add_user">Icon Add User</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="button_to_next">Button to Next</string>
    <string name="button_to_check">Button to Check</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="john_doe">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="button_to_choose_a_user">Button to Choose a User</string>
    <string name="third_screen">Third Screen</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="example_email">email@email.com</string>
    <string name="true_palindrome">Wow, that is palindrome</string>
    <string name="false_palindrome">Oh no, that is not palindrome</string>
    <string name="close">Close</string>
    <string name="empty_palindrome">Please input text to check</string>
    <string name="empty_username">Username cannot be empty</string>
    <string name="please_wait">Please Wait…</string>
    <string name="empty">Empty</string>
</resources>