<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".feature.second.SecondScreen"
    android:paddingTop="50dp">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/second_screen_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_screen"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="18sp"
        android:textColor="#04021D"
        app:layout_constraintTop_toTopOf="@id/second_screen_btn_back"
        app:layout_constraintBottom_toBottomOf="@id/second_screen_btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/second_screen_div_1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?android:attr/dividerVertical"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@id/second_screen_title"/>

    <TextView
        android:id="@+id/second_screen_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:textSize="12sp"
        android:textColor="#04021D"
        app:layout_constraintTop_toBottomOf="@id/second_screen_div_1"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/second_screen_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_doe"
        android:fontFamily="@font/poppins_semi_bold"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textColor="#04021D"
        app:layout_constraintTop_toBottomOf="@id/second_screen_welcome"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/second_screen_selected_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_user_name"
        android:fontFamily="@font/poppins_semi_bold"
        android:layout_margin="20dp"
        android:textSize="24sp"
        android:textColor="#04021D"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/second_screen_btn_choose_a_user"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/choose_a_user"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="32dp"
        android:contentDescription="@string/button_to_choose_a_user"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

